# geezy

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
geezy/: index.html  sidebar-items.js  struct.Coords.html
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
src/: lib.rs
src/geezy/src/: lib.rs.html
